人狼のプログラム完成。 例外処理が甘いのと、勝利条件の判定に見逃しがあるかもしれません。 気合が不足しなければ修正します。

--- a/app/src/main/res/layout/activity_werewolf_confirmation.xml
+++ b/app/src/main/res/layout/activity_werewolf_confirmation.xml
@@ -53,7 +53,7 @@
         android:id="@+id/text3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="端末を渡してください。"
+        android:text="端末を渡しなさい。"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.26"
+        app:layout_constraintHorizontal_bias="0.28"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,7 +75,7 @@
         android:id="@+id/text5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ですか？"
+        android:text="ですね？"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pnText2"
