--- a/app/src/main/res/layout/activity_werewolf_intro.xml
+++ b/app/src/main/res/layout/activity_werewolf_intro.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="夜の行動をしてください。"
+        android:text="夜の行動をしなさい。"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="恐ろしい夜がやってきました…"
+        android:text="恐ろしい夜がやってきた…"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
