--- a/app/src/main/res/layout/activity_werewolf_morning.xml
+++ b/app/src/main/res/layout/activity_werewolf_morning.xml
@@ -10,7 +10,7 @@
         android:id="@+id/morningText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="恐ろしい夜が終わりました。"
+        android:text="恐ろしい夜が終わった。"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
         android:id="@+id/morningText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="誰を処刑するか決めてください。"
+        android:text="誰を処刑するか決めなさい。"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
