--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,19 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.17000002" />
+        app:layout_constraintVertical_bias="0.211" />
 
     <Button
         android:id="@+id/RPS"
         android:layout_width="210dp"
         android:layout_height="70dp"
         android:layout_marginTop="100dp"
+        android:background="#F5F5F5"
         android:text="じゃんけん"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +40,7 @@
         android:layout_width="210dp"
         android:layout_height="70dp"
         android:layout_marginTop="10dp"
+        android:background="#F5F5F5"
         android:text="人狼"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,5 +56,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/werewolf" />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="204dp"
+        android:layout_height="166dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.945"
+        app:srcCompat="@drawable/tanuki" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
