--- a/app/src/main/res/layout/activity_werewolf_confirmation.xml
+++ b/app/src/main/res/layout/activity_werewolf_confirmation.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text5"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:text="プレイヤー"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -35,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:text="1"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/text"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:text="に"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/pnText"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="端末を渡してください。"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="プレイヤー"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ですか？"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pnText2"
@@ -92,4 +99,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pnText2"
         app:layout_constraintVertical_bias="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
