--- a/app/src/main/res/drawable/sprash.xml
+++ b/app/src/main/res/drawable/sprash.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".sprash">
     <item android:drawable="@color/colorPrimaryDark" />
-    <item>
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/favourite_app_icon" />
+    <!--<item>
         <shape android:shape="rectangle" >
             <solid android:color="#222222" />
         </shape>
@@ -10,5 +26,5 @@
         <bitmap
             android:gravity="center"
             android:src="@drawable/gankyo" />
-    </item>
-</layer-list>
+    </item>-->
+</androidx.constraintlayout.widget.ConstraintLayout>
