--- a/app/src/main/res/layout/activity_werewolf_confirmation.xml
+++ b/app/src/main/res/layout/activity_werewolf_confirmation.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text5"
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:text="プレイヤー"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -36,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:text="1"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/text"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:text="に"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintStart_toEndOf="@+id/pnText"
         app:layout_constraintTop_toTopOf="parent" />
@@ -55,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="端末を渡しなさい。"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="プレイヤー"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +82,8 @@
         android:id="@+id/text5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ですね？"
+        android:text="ですか？"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pnText2"
