--- a/app/src/main/res/layout/activity_eat_result.xml
+++ b/app/src/main/res/layout/activity_eat_result.xml
@@ -38,4 +38,12 @@
         android:layout_marginTop="50dp"
         android:onClick="tryAgain"/>
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="118dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:onClick="tryAgain"
+        android:text="戻る" />
+
 </LinearLayout>
