--- a/app/src/main/res/layout/activity_eat_start.xml
+++ b/app/src/main/res/layout/activity_eat_start.xml
@@ -12,8 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="32sp"/>
+        android:text="Eat Fruits"
+        android:textSize="32sp" />
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -66,10 +66,19 @@
     </TableLayout>
 
     <Button
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="START"
         android:layout_marginTop="60dp"
-        android:onClick="startGame"/>
+        android:onClick="startGame"
+        android:text="START" />
+
+    <Button
+        android:id="@+id/bottom"
+        android:layout_width="105dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:onClick="startGame"
+        android:text="戻る" />
 
 </LinearLayout>
